# src/controllers/taskController.js
@@ -1,8 +1,26 @@
+import { findAll } from '../repositories/taskRepo.js';
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
-  res.json(tasks);
+  const {
+    completed,
+    search = '',
+    sortBy = 'id',
+    order = 'asc',
+    offset = 0,
+    limit = 5,
+  } = req.query;
+
+  const options = {
+    search,
+    sortBy,
+    completed,
+    order,
+    offset: parseInt(offset),
+    limit: parseInt(limit),
+  };
+  let tasks = await findAll(options);
+  res.status(200).json(tasks);
 }
 
 export async function createTask(req, res, next) {
